--- a/css/styles.css
+++ b/css/styles.css
@@ -2,6 +2,7 @@
 
 body {
     font-family: "Open Sans", sans-serif;
+    background-color: #000000;
 }
 
 h1, h2, h3 {
@@ -17,14 +18,14 @@ header h2 {
 }
 
 footer {
-    background-image: linear-gradient(#CEC8FF, white);
+    background-image: linear-gradient(#3046c5, #292828);
     padding: 20px 0;
 }
 
 .jumbotron {
     margin: 0;
     padding: 30px;
-    background-image: linear-gradient(to right, #5637DD, #3046C5, #60106B);
+    background-image: linear-gradient(to right, #3046C5, #292828);
     color: white;
 }
 
@@ -35,10 +36,31 @@ footer {
 }
 
 .navbar {
-    background-color: #901cad;
+    background-color: #383737;
 }
 
 .site-footer{
-    background-image: linear-gradient(#CEC8FF, white);
+    background-image: linear-gradient(#3046c5, #292828);
     padding: 20px 0;
+}
+.carousel-caption {
+    background-color: rgba(0, 0, 0, 0.5);
+}
+
+.carousel {
+    border: solid #918ea1;
+}
+
+* {
+    color: white;
+  }
+
+  a {
+    color: #f4f5f7;
+    text-decoration: none;
+    background-color: transparent;
+}
+
+.cardBg {
+    color:#918ea1;
 }
