--- a/css/styles.css
+++ b/css/styles.css
@@ -1,66 +1,56 @@
-/* You do not need to change anything in this CSS section. */
-
 body {
-    font-family: "Open Sans", sans-serif;
-    background-color: #000000;
-}
+  font-family: "Open Sans", sans-serif; }
 
 h1, h2, h3 {
-    font-family: "Lobster", cursive;
-}
+  font-family: "Lobster", cursive; }
 
 h2 {
-    color: #3046C5;
-}
+  color: #d1e0c4; }
 
 header h2 {
-    color: #CEC8FF;
-}
+  color: #d1e0c4; }
 
-footer {
-    background-image: linear-gradient(#3046c5, #292828);
-    padding: 20px 0;
-}
+.site-footer {
+  background-image: linear-gradient(#d1e0c4, white);
+  padding: 20px 0; }
 
 .jumbotron {
-    margin: 0;
-    padding: 30px;
-    background-image: linear-gradient(to right, #3046C5, #292828);
-    color: white;
-}
+  margin: 0;
+  padding: 30px;
+  background-image: linear-gradient(to right, #5637dd, #3046C5, #60106b);
+  color: white; }
 
 .row-content {
-    padding: 50px 0;
-    border-bottom: 1px ridge;
-    min-height: 200px;
-}
+  padding: 50px 0;
+  border-bottom: 1px ridge;
+  min-height: 200px; }
 
 .navbar {
-    background-color: #383737;
-}
-
-.site-footer{
-    background-image: linear-gradient(#3046c5, #292828);
-    padding: 20px 0;
-}
-.carousel-caption {
-    background-color: rgba(0, 0, 0, 0.5);
-}
+  background-color: #901CAD; }
 
 .carousel {
-    border: solid #918ea1;
-}
+  border: solid #5637dd; }
+
+.carousel-caption {
+  background-color: rgba(0, 0, 0, 0.5); }
 
 * {
-    color: white;
-  }
+  color: white; }
 
-  a {
-    color: #f4f5f7;
-    text-decoration: none;
-    background-color: transparent;
-}
+a {
+  color: #f4f5f7;
+  text-decoration: none;
+  background-color: transparent; }
 
 .cardBg {
-    color:#918ea1;
-}
+  color: #918ea1; }
+
+#carouselButton {
+  position: absolute;
+  right: 0;
+  bottom: 0;
+  z-index: 100; }
+
+#reserveModal .modal-header {
+  background-color: #17A2B8;
+  color: white; }
